:bug: fix(frames.scss): Hide overflow for frame component #195

--- a/src/components/frames.scss
+++ b/src/components/frames.scss
@@ -9,6 +9,7 @@
     box-shadow: 0 0.2rem 1.25rem 0 rgba(27, 30, 36, 0.07);
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     /* For the frame header and footer, use flex display */
     .frame__header,
